2012-01-29  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs: Fixed dialog window parents

2012-01-29  Andrew Okin  <razorblades13@gmail.com>

	* MultiMC.csproj, MainWindow.cs, Resources.cs,
	  ChangeIconDialog.cs, MultiMC.MainWindow.cs,
	  MultiMC.ChangeIconDialog.cs: Added ability to change icons.

	* ModLoaderProblems.cs: Fixed a minor parsing bug

2012-01-28  Andrew Okin  <razorblades13@gmail.com>

	* ConsoleWindow.cs, Problems.cs, ModLoaderProblems.cs: Added
	  more problem detection

2012-01-28  Andrew Okin  <razorblades13@gmail.com>

	* Problems.cs, MinecraftProblem.cs: Added easily extendable
	  problem detection for telling users what certain error
	  messages mean.

2012-01-27  Andrew Okin  <razorblades13@gmail.com>

	* MessageUtils.cs, Instance.cs, ConsoleWindow.cs,
	  MultiMC.MainWindow.cs: Added some basic crash detection

2012-01-27  Andrew Okin  <razorblades13@gmail.com>

	* StyleUtils.cs, MainWindow.cs, ConsoleWindow.cs: Made the
	  context menus less ugly

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* MainWindow.cs, ConsoleWindow.cs: Added icons to windows

	* gui.stetic: 

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* ConsoleWindow.cs: Fixed a crash when starting an instance

	* MainWindow.cs: Fixed a crash that occurred when certain
	  files did not exist on startup.

	* SettingsDialog.cs: JavaPath is now set properly

	* MultiMC.csproj: Removed the formatting policy from the
	  project files. Please import the policy from the solution
	  instead.

	* AppSettings.cs: Code formatting changes

	* Resources.cs: Added config file and the url to download
	  DotNetZip from

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* Task.cs: Renamed the ProcessThread property to TaskThread to
	  make it less confusing.

2012-01-26  Andrew Okin  <razorblades13@gmail.com>

	* MultiMC.ico: Added the icon (MonoDevelop apparently decided
	  it didn't like my icon and didn't add it to git...)
