@@ -125,6 +125,8 @@ It also allows you to install mods by dragging and dropping their files.</Descri
     <Compile Include="ProblemDetection\ModLoaderProblems.cs" />
     <Compile Include="GUI\ChangeIconDialog.cs" />
     <Compile Include="gtk-gui\MultiMC.ChangeIconDialog.cs" />
+    <Compile Include="gtk-gui\MultiMC.EditModsDialog.cs" />
+    <Compile Include="GUI\EditModsDialog.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
